--- a/sass/modules/_m-realisations-grid.scss
+++ b/sass/modules/_m-realisations-grid.scss
@@ -1,4 +1,7 @@
 /*GRID REALISATION CARD1 */
+.m-wrap {
+  width: 95%
+}
 .grid-containerAmoi {
   display: grid;
   grid-template-columns: 20% 13% 7% 15% 30% 15%;
@@ -19,16 +22,21 @@
 
 .item-2 {
   grid-column: 1 / 7;
-  grid-row: 3 / 6;
-  margin-bottom: 10px;
+  grid-row: 3/4;
+  margin-bottom: 20px;
+  padding-bottom: 10px;
   margin-top: 30px;
- // background: lightgray;
+  background: lightgray;
 }
 
 .item-3 {
   grid-column: 1 / 7;
   grid-row: 4 / 6;
   margin-bottom: 30px;
+  padding-bottom: 10px;
+  margin-top: 30px;
+  border-top: 3px solid yellow;
+
 }
 
 .item-4 {
@@ -52,6 +60,9 @@
 
 /* version petite tablette xs 600px */
 @media screen and (min-width: break-point(xs)){
+  .m-wrap {
+    width: 85%
+  }
   .grid-containerAmoi {
     font-size: 16px;
   }
@@ -67,19 +78,32 @@
   .item-2{
     grid-column: 1 / 3;
     grid-row: 3 / 11;
+    padding-bottom: 10px;
+    margin-bottom: 15px;
+    margin-top: 20px;
   }
 
   .item-3 {
     grid-column: 5 / 7;
+    padding-bottom: 10px;
+    margin-bottom: 15px;
+    margin-top: 20px;
+
   }
 
   .item-4 {
     grid-column: 2 / 7;
+    padding-bottom: 10px;
+    margin-bottom: 15px;
+    margin-top: 20px;
   }
 }
 
 /* grande TABLETTE md = 740 */
 @media screen and (min-width: break-point(md)){
+  .m-wrap {
+    width: 80%
+  }
   .item-1{
     z-index: 2;
   }
