--- a/sass/modules/_m-realisations-grid.scss
+++ b/sass/modules/_m-realisations-grid.scss
@@ -22,17 +22,18 @@
 
 .item-2 {
   grid-column: 1 / 7;
-  grid-row: 3/4;
+  grid-row: 3/5;
   margin-bottom: 20px;
   padding-bottom: 10px;
-  margin-top: 30px;
+  margin-top: 138px;
   background: lightgray;
+  border: yellowgreen;
 }
 
 .item-3 {
   grid-column: 1 / 7;
   grid-row: 4 / 6;
-  margin-bottom: 30px;
+  margin-bottom: 178px;
   padding-bottom: 10px;
   margin-top: 30px;
   border-top: 3px solid yellow;
