--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -1,6 +1,7 @@
 
 $break-point: (
-    xxs:    370px,
+    xxxs:    370px,
+    xxs:    420px,
     xs:     600px,
     md:     740px,
     md-plus: 799px,
