--- a/css/screen.css
+++ b/css/screen.css
@@ -1679,7 +1679,8 @@ footer .l-footer .section__footer--right .btn--footer {
     border: 1px dotted red;
   }
   */
-  /* version moyen mobile xxs 370px */
+  /* version petit mobile xxxs 370px */
+  /* version moyen mobile xxs 420px */
   /* version petite tablette  xs 600px */
   /* grande TABLETTE md = 740px */
   /* petit PC portable md-plus 799px */
@@ -1754,6 +1755,20 @@ footer .l-footer .section__footer--right .btn--footer {
   .m-wrap .coverimage-ter img {
     width: 130%;
     padding-left: 30px;
+  }
+}
+@media screen and (min-width: break-point xxs) {
+  .m-wrap .title__primary2 {
+    font-size: 1.6rem;
+  }
+  .m-wrap .coverimage {
+    bottom: 309px;
+  }
+  .m-wrap .coverimage-ter {
+    width: 28%;
+    left: 136px;
+    bottom: 285px;
+    padding-left: 10px;
   }
 }
 @media screen and (min-width: 600px) {
@@ -1890,7 +1905,7 @@ footer .l-footer .section__footer--right .btn--footer {
 
 .item-2 {
   grid-column: 1/7;
-  grid-row: 3/5;
+  grid-row: 3/4;
   margin-bottom: 20px;
   padding-bottom: 10px;
   margin-top: 138px;
@@ -1901,7 +1916,7 @@ footer .l-footer .section__footer--right .btn--footer {
 .item-3 {
   grid-column: 1/7;
   grid-row: 4/6;
-  margin-bottom: 178px;
+  margin-bottom: 60px;
   padding-bottom: 10px;
   margin-top: 30px;
   border-top: 3px solid yellow;
@@ -1926,6 +1941,12 @@ footer .l-footer .section__footer--right .btn--footer {
   margin-top: 90px;
 }
 
+/* version moyen mobile xxs 420px */
+@media screen and (min-width: breal-point(xxs)) {
+  .item-2 {
+    margin-top: 1rem;
+  }
+}
 /* version petite tablette xs 600px */
 @media screen and (min-width: 600px) {
   .m-wrap {
@@ -1948,7 +1969,6 @@ footer .l-footer .section__footer--right .btn--footer {
     grid-column: 1/3;
     grid-row: 3/11;
     padding-bottom: 10px;
-    margin-bottom: 15px;
     margin-top: 20px;
   }
 
