--- a/sass/modules/_m-realisations-grid.scss
+++ b/sass/modules/_m-realisations-grid.scss
@@ -22,7 +22,7 @@
 
 .item-2 {
   grid-column: 1 / 7;
-  grid-row: 3/5;
+  grid-row: 3/4;
   margin-bottom: 20px;
   padding-bottom: 10px;
   margin-top: 138px;
@@ -33,7 +33,7 @@
 .item-3 {
   grid-column: 1 / 7;
   grid-row: 4 / 6;
-  margin-bottom: 178px;
+  margin-bottom: 60px;
   padding-bottom: 10px;
   margin-top: 30px;
   border-top: 3px solid yellow;
@@ -58,6 +58,13 @@
   margin-bottom: 10px;
   margin-top: 90px;
 }
+/* version moyen mobile xxs 420px */
+@media screen and (min-width: breal-point(xxs)){
+  .item-2{
+    margin-top: 1rem;
+  }
+
+}
 
 /* version petite tablette xs 600px */
 @media screen and (min-width: break-point(xs)){
@@ -80,7 +87,7 @@
     grid-column: 1 / 3;
     grid-row: 3 / 11;
     padding-bottom: 10px;
-    margin-bottom: 15px;
+
     margin-top: 20px;
   }
 
