grid section det et footer

--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -1,10 +1,10 @@
-html, body, div, span, h1, h2, p, a, strong, b, u, i, center, dl, dt, dd, ol, ul, li, form, label, legend, table,
+html, body, h1, h2, strong, b, u, i, center, dl, dt, dd, ol, form, label, legend, table,
 tbody, tfoot, thead, tr, th, td, footer, header, menu, nav
 {
     margin: 0;
     padding: 0;
     border: 0;
-    font-size: 100%;
+    
     vertical-align: baseline;
 }
 
