--- a/sass/layout/_l-footer.scss
+++ b/sass/layout/_l-footer.scss
@@ -37,6 +37,8 @@ footer{
             .section__footer--left{
                 justify-content: space-between;
                 margin-left: 2rem;
+                margin-top: 1rem;
+
                 h1{
                     padding-top: 2rem;
                 }
@@ -53,10 +55,13 @@ footer{
 
             .section__footer--middle{
                 justify-content: space-between;
-                margin-left: 2rem;
+                margin-left: 1rem;
+                padding:0;
+                margin-top: 2rem;
 
                 h1{
                     margin-bottom: 1rem;
+                    margin-left: 1rem;
                 }
 
                 @media screen and (min-width: map-get($break-point, lg)) {
@@ -65,6 +70,9 @@ footer{
                     margin-left: 0rem;
                 }
 
+                ul{
+                    padding:1rem;
+                }
                 
                 li{
                     color: map-get($colors ,main );
@@ -106,7 +114,7 @@ footer{
                 
                 .btn--footer{
                     float: left;
-                    margin: 2rem auto auto auto;
+                    margin: 2rem auto auto 0;
                     
                 }
 
@@ -125,7 +133,7 @@ footer{
     text-align: center;
     padding-top: 3rem;
     padding-bottom: 1rem;
-    margin-left: -6rem;
+    margin-left: -1rem;
     width: auto;
     background-color:map-get($colors , primary ); 
 
