--- a/sass/layout/_l-header.scss
+++ b/sass/layout/_l-header.scss
@@ -103,6 +103,7 @@
 
                 margin-left: auto;
                 margin-right: auto;
+                
 
 
 
@@ -133,7 +134,7 @@
                     height: 4rem;
                     text-align: left;
                     position: inherit;
-                    padding-top: 1rem;
+                    padding-top: 0;
                     display: inline-block;
                     font-size: 18px;
                 }
@@ -162,7 +163,7 @@
 
                 @media screen and (min-width: map-get($break-point, md)) {
                     display: inline-block;
-                    margin:auto 0rem auto 0rem;
+                    margin:auto 0rem auto -0.5rem;
 
                     &:hover {
                         transform: scale(.9);
