image cover et back

--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -1,9 +1,10 @@
 
 $break-point: (
     xxxs:    370px,
-    xxs:    420px,
-    xs:     600px,
-    md:     740px,
+    xxs:     420px,
+    xx-s:    530px,
+    xs:      600px,
+    md:      740px,
     md-plus: 799px,
     lg:    1024px,
     mlg:   1280px,
