--- a/css/screen.css
+++ b/css/screen.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*
     Created on : 20-12-2019, 20:01:31
     Author     : Sylviana Vanmessen
@@ -1681,6 +1682,7 @@ footer .l-footer .section__footer--right .btn--footer {
   */
   /* version petit mobile xxxs 370px */
   /* version moyen mobile xxs 420px */
+  /* version très petite tablette xx-s 530px */
   /* version petite tablette  xs 600px */
   /* grande TABLETTE md = 740px */
   /* petit PC portable md-plus 799px */
@@ -1691,7 +1693,7 @@ footer .l-footer .section__footer--right .btn--footer {
   border: 3px dashed yellowgreen;
 }
 .m-wrap .lime {
-  margin: 15px;
+  margin: 1.2rem;
 }
 .m-wrap .title__primary2 {
   font-style: italic;
@@ -1709,35 +1711,35 @@ footer .l-footer .section__footer--right .btn--footer {
   font-weight: 800;
 }
 .m-wrap .backimage {
-  padding-left: 10px;
+  padding-left: 0.6rem;
 }
 .m-wrap .backimage > img {
   max-width: 88%;
-  margin-top: 20px;
-  padding-top: 20px;
+  margin-top: 1.4rem;
+  padding-top: 1.4rem;
 }
 .m-wrap .backimage-second img {
   position: relative;
   max-width: 100%;
-  left: -20px;
-  top: -213px;
+  left: -1.4rem;
+  top: -16rem;
 }
 .m-wrap .coverimage {
   position: relative;
-  left: -36px;
-  bottom: 243px;
+  left: -2.1rem;
+  bottom: 16rem;
   width: 84%;
-  padding-left: 64px;
+  padding-left: 5rem;
 }
 .m-wrap .coverimage-ter {
   display: block;
   position: relative;
   width: 25%;
-  left: 132px;
-  bottom: 237px;
+  left: 8.7rem;
+  bottom: 12.5rem;
 }
 .m-wrap .coverrelatif {
-  padding-right: 10px;
+  padding-right: 0.8rem;
   width: 90%;
 }
 .m-wrap .coverrelatif img {
@@ -1750,11 +1752,11 @@ footer .l-footer .section__footer--right .btn--footer {
 @media screen and (min-width: 370px) {
   .m-wrap .coverrelatif img {
     width: 88%;
-    padding-left: 10px;
+    padding-left: 0.8rem;
   }
   .m-wrap .coverimage-ter img {
     width: 130%;
-    padding-left: 30px;
+    padding-left: 2.2rem;
   }
 }
 @media screen and (min-width: break-point xxs) {
@@ -1762,36 +1764,60 @@ footer .l-footer .section__footer--right .btn--footer {
     font-size: 1.6rem;
   }
   .m-wrap .coverimage {
-    bottom: 309px;
+    bottom: 19rem;
   }
   .m-wrap .coverimage-ter {
     width: 28%;
-    left: 136px;
-    bottom: 285px;
-    padding-left: 10px;
+    /*
+    left: 11.6rem;
+    bottom: 16.5rem;
+    */
+    left: 9.7rem;
+    bottom: 18.5rem;
+    padding-left: 0.8rem;
+  }
+}
+@media screen and (min-width: 530px) {
+  .m-wrap .coverimage {
+    bottom: 25rem;
+  }
+  .m-wrap .coverimage-ter {
+    left: 12.7rem;
+    bottom: 23.5rem;
   }
 }
 @media screen and (min-width: 600px) {
   .m-wrap .backimage {
     position: absolute;
     padding-left: 10px;
+    width: 42%;
+    margin-top: 7rem;
   }
   .m-wrap .backimage > img {
-    max-width: 104%;
-    left: 34px;
-    top: -42px;
+    max-width: 74%;
+    left: 2.1rem;
+    top: -2.3rem;
+  }
+  .m-wrap .coverimage {
+    bottom: 12rem;
   }
   .m-wrap .coverrelatif {
-    left: 91px;
-    bottom: 171px;
+    left: 6.1rem;
+    bottom: 11.2rem;
+    width: 100%;
   }
   .m-wrap .coverrelatif img {
-    max-width: 65%;
+    max-width: 81%;
+  }
+  .m-wrap .coverimage-ter {
+    left: 5.3rem;
+    bottom: 26.5rem;
   }
   .m-wrap .coverrelatif-ter {
     position: absolute;
-    left: 70px;
-    bottom: -138px;
+    left: -0.4rem;
+    bottom: -20.2rem;
+    border: 1px solid orange;
   }
   .m-wrap .coverimage-ter {
     display: block;
@@ -1799,31 +1825,41 @@ footer .l-footer .section__footer--right .btn--footer {
   }
 }
 @media screen and (min-width: 740px) {
+  .m-wrap .coverimage {
+    left: -4rem;
+  }
   .m-wrap .coverrelatif {
-    left: 52px;
-    bottom: 190px;
+    left: 4.9rem;
+    bottom: 13.2rem;
+  }
+  .m-wrap .coverrelatif img {
+    max-width: 65%;
   }
   .m-wrap .coverrelatif-second {
-    left: -34px;
-    bottom: 121px;
+    left: -2.1rem;
+    bottom: 12.2rem;
+  }
+  .m-wrap .coverimage-ter {
+    left: -11.7rem;
+    bottom: 9.5rem;
   }
   .m-wrap .coverrelatif-ter {
-    left: 277px;
-    bottom: -46px;
-    width: 35%;
+    left: 16rem;
+    bottom: -3.1rem;
+    width: 90%;
   }
   .m-wrap .backimage > img {
-    left: -98px;
-    max-width: 47%;
-    top: -28px;
+    left: -7.2rem;
+    max-width: 59%;
+    top: -1.8rem;
   }
 }
 @media screen and (min-width: 799px) {
   .m-wrap .backimage > img {
     position: relative;
-    left: 74px;
+    left: 4.8rem;
     max-width: 51%;
-    top: -21px;
+    top: -1.3rem;
   }
   .m-wrap .coverimage {
     position: absolute;
@@ -1833,50 +1869,52 @@ footer .l-footer .section__footer--right .btn--footer {
   }
   .m-wrap .coverrelatif {
     position: relative;
-    left: 106px;
-    bottom: -109px;
+    left: 7.5rem;
+    bottom: -6.2rem;
+    width: 89%;
   }
   .m-wrap .coverrelatif img {
-    max-width: 100%;
+    max-width: 68%;
   }
   .m-wrap .coverrelatif-second {
-    position: relative;
-    left: -34px;
-    bottom: -76px;
-  }
-  .m-wrap .coverrelatif-second img {
-    max-width: 30%;
+    /*position: relative;
+    left: -2.1rem;
+    bottom: -1.7rem;
+    border: 1px solid red;
+    width: 15%;*/
+    display: none;
   }
   .m-wrap .coverrelatif-ter {
     position: absolute;
-    left: 310px;
-    bottom: -64px;
-    max-width: 34%;
+    left: 20.2rem;
+    bottom: -7.1rem;
+    max-width: 152%;
   }
   .m-wrap .coverrelatif-ter img {
-    max-width: 55%;
+    max-width: 100%;
+    bottom: -9rem;
   }
   .m-wrap .backimage-second {
-    padding-left: 10px;
-    margin-left: 20px;
+    padding-left: 0.8rem;
+    margin-left: 1.6rem;
   }
   .m-wrap .backimage-second img {
-    max-width: 68%;
-    left: -17px;
-    top: -147px;
+    max-width: 100%;
+    left: -1.1rem;
+    top: -1rem;
   }
 }
 @media screen and (min-width: 1024px) {
   .m-wrap .coverrelatif-ter {
     position: absolute;
-    left: 310px;
-    bottom: -90px;
-    max-width: 34%;
+    left: 22rem;
+    bottom: -7.2rem;
+    max-width: 100%;
   }
 }
 @media screen and (min-width: 1360px) {
   .m-wrap .backimage-second img {
-    top: -180px;
+    top: -11.5rem;
   }
 }
 
@@ -1888,27 +1926,27 @@ footer .l-footer .section__footer--right .btn--footer {
 .grid-containerAmoi {
   display: grid;
   grid-template-columns: 20% 13% 7% 15% 30% 15%;
-  font-size: 18px;
+  font-size: 1.2rem;
 }
 
 .grid-containerAmoi > * {
-  padding-left: 10px;
+  padding-left: 0.8rem;
 }
 
 .item-1 {
   grid-column: 1/7;
   grid-row: 2/3;
-  margin-bottom: 20px;
-  padding-bottom: 10px;
-  margin-top: 20px;
+  margin-bottom: 1.4rem;
+  padding-bottom: 0.8rem;
+  margin-top: 1.4rem;
 }
 
 .item-2 {
   grid-column: 1/7;
   grid-row: 3/4;
-  margin-bottom: 20px;
-  padding-bottom: 10px;
-  margin-top: 138px;
+  margin-bottom: 1.4rem;
+  padding-bottom: 0.8rem;
+  margin-top: 9.1rem;
   background: lightgray;
   border: yellowgreen;
 }
@@ -1916,17 +1954,17 @@ footer .l-footer .section__footer--right .btn--footer {
 .item-3 {
   grid-column: 1/7;
   grid-row: 4/6;
-  margin-bottom: 60px;
-  padding-bottom: 10px;
-  margin-top: 30px;
+  margin-bottom: 3.8rem;
+  padding-bottom: 0.8rem;
+  margin-top: 1.9rem;
   border-top: 3px solid yellow;
 }
 
 .item-4 {
   grid-column: 2/7;
   grid-row: 7/8;
-  margin-top: 30px;
-  margin-bottom: 40px;
+  margin-top: 1.9rem;
+  margin-bottom: 4.5rem;
   z-index: 4;
 }
 
@@ -1937,8 +1975,8 @@ footer .l-footer .section__footer--right .btn--footer {
 .item-6 {
   grid-column: 1/7;
   grid-row: 8/10;
-  margin-bottom: 10px;
-  margin-top: 90px;
+  margin-bottom: 0.8rem;
+  margin-top: 5.4rem;
 }
 
 /* version moyen mobile xxs 420px */
@@ -1950,40 +1988,43 @@ footer .l-footer .section__footer--right .btn--footer {
 /* version petite tablette xs 600px */
 @media screen and (min-width: 600px) {
   .m-wrap {
-    width: 85%;
+    width: 90%;
   }
 
   .grid-containerAmoi {
-    font-size: 16px;
+    font-size: 1rem;
   }
 
   .item-1 {
     grid-column: 2/7;
     grid-row: 2/3;
-    padding-bottom: 10px;
-    margin-bottom: 15px;
-    margin-top: 20px;
+    padding-bottom: 0.8rem;
+    margin-bottom: 1.3rem;
+    margin-top: 1.4rem;
+    border: 1px dotted red;
   }
 
   .item-2 {
     grid-column: 1/3;
-    grid-row: 3/11;
-    padding-bottom: 10px;
-    margin-top: 20px;
+    grid-row: 3/10;
+    padding-bottom: 0.8rem;
+    margin-top: 8.4rem;
+    border: 1px dotted lightcoral;
+    z-index: 6;
   }
 
   .item-3 {
     grid-column: 5/7;
-    padding-bottom: 10px;
-    margin-bottom: 15px;
-    margin-top: 20px;
+    padding-bottom: 10.8rem;
+    margin-bottom: 1.1rem;
+    margin-top: 1.4rem;
   }
 
   .item-4 {
     grid-column: 2/7;
-    padding-bottom: 10px;
-    margin-bottom: 15px;
-    margin-top: 20px;
+    padding-bottom: 0.8rem;
+    margin-bottom: 1rem;
+    margin-top: 1.4rem;
   }
 }
 /* grande TABLETTE md = 740 */
@@ -2003,8 +2044,8 @@ footer .l-footer .section__footer--right .btn--footer {
 
   .item-3 {
     grid-column: 5/7;
-    margin-left: 40px;
-    padding-left: 20px;
+    margin-left: 2.6rem;
+    padding-left: 1.4rem;
     z-index: 2;
   }
 }
@@ -2013,9 +2054,9 @@ footer .l-footer .section__footer--right .btn--footer {
   .item-1 {
     grid-column: 5/7;
     grid-row: 2/3;
-    padding-bottom: 10px;
-    margin-bottom: 15px;
-    margin-top: 20px;
+    padding-bottom: 0.8rem;
+    margin-bottom: 1rem;
+    margin-top: 1.4rem;
   }
 
   .item-2 {
@@ -2028,20 +2069,20 @@ footer .l-footer .section__footer--right .btn--footer {
   }
 
   .item-3 {
-    grid-column: 4/6;
+    grid-column: 5/7;
     grid-row: 4/5;
-    margin-bottom: 30px;
+    margin-bottom: 1.9rem;
     z-index: 3;
-    margin-left: 47px;
+    margin-left: 3.1rem;
   }
 
   .item-4 {
     grid-column: 2/6;
-    grid-row: 6/7;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    margin-right: 20px;
-    z-index: 4;
+    grid-row: 5/7;
+    margin-top: 1.9rem;
+    margin-bottom: -1.9rem;
+    margin-right: 1.4rem;
+    z-index: 6;
   }
 
   .item-5 {
@@ -2049,11 +2090,11 @@ footer .l-footer .section__footer--right .btn--footer {
     grid-column: 6/7;
     grid-row: 5/9;
     z-index: 6;
-    padding-top: 30px;
-    margin-bottom: 20px;
+    padding-top: 1.9rem;
+    margin-bottom: 1.4rem;
   }
   .item-5 p {
-    font-size: 16px;
+    font-size: 1rem;
   }
 
   .item-6 {
@@ -2061,6 +2102,13 @@ footer .l-footer .section__footer--right .btn--footer {
     grid-row: 8/10;
     margin-bottom: 10px;
     z-index: 3;
+  }
+}
+/* petit PC portable md-plus 1280px */
+@media screen and (min-width: ) {
+  .item-4 {
+    grid-column: 3/6;
+    z-index: 6;
   }
 }
 .section__test {
