--- a/sass/modules/_m-realisations-grid.scss
+++ b/sass/modules/_m-realisations-grid.scss
@@ -5,27 +5,27 @@
 .grid-containerAmoi {
   display: grid;
   grid-template-columns: 20% 13% 7% 15% 30% 15%;
-  font-size: 18px;
+  font-size: 1.2rem;
 }
 .grid-containerAmoi>* {
-  padding-left: 10px;
+  padding-left: 0.8rem;
 }
 
 .item-1 {
   grid-column: 1 / 7;
   grid-row: 2 / 3;
-  margin-bottom: 20px;
-  padding-bottom: 10px;
-  margin-top: 20px;
+  margin-bottom: 1.4rem;
+  padding-bottom: 0.8rem;
+  margin-top: 1.4rem;
   //background: orange;
 }
 
 .item-2 {
   grid-column: 1 / 7;
   grid-row: 3/4;
-  margin-bottom: 20px;
-  padding-bottom: 10px;
-  margin-top: 138px;
+  margin-bottom: 1.4rem;
+  padding-bottom: 0.8rem;
+  margin-top: 9.1rem;
   background: lightgray;
   border: yellowgreen;
 }
@@ -33,9 +33,9 @@
 .item-3 {
   grid-column: 1 / 7;
   grid-row: 4 / 6;
-  margin-bottom: 60px;
-  padding-bottom: 10px;
-  margin-top: 30px;
+  margin-bottom: 3.8rem;
+  padding-bottom: 0.8rem;
+  margin-top: 1.9rem;
   border-top: 3px solid yellow;
 
 }
@@ -43,8 +43,8 @@
 .item-4 {
   grid-column: 2 / 7;
   grid-row: 7 / 8;
-  margin-top: 30px;
-  margin-bottom: 40px;
+  margin-top: 1.9rem;
+  margin-bottom: 4.5rem;
   z-index: 4;
 }
 
@@ -55,8 +55,8 @@
 .item-6 {
   grid-column: 1 / 7;
   grid-row: 8 / 10;
-  margin-bottom: 10px;
-  margin-top: 90px;
+  margin-bottom: 0.8rem;
+  margin-top: 5.4rem;
 }
 /* version moyen mobile xxs 420px */
 @media screen and (min-width: breal-point(xxs)){
@@ -69,41 +69,43 @@
 /* version petite tablette xs 600px */
 @media screen and (min-width: break-point(xs)){
   .m-wrap {
-    width: 85%
+    width: 90%;
   }
   .grid-containerAmoi {
-    font-size: 16px;
+    font-size: 1rem;
   }
 
   .item-1 {
     grid-column: 2 / 7;
     grid-row: 2 / 3;
-    padding-bottom: 10px;
-    margin-bottom: 15px;
-    margin-top: 20px;
+    padding-bottom: 0.8rem;
+    margin-bottom: 1.3rem;
+    margin-top: 1.4rem;
+    border: 1px dotted red;
   }
 
   .item-2{
     grid-column: 1 / 3;
-    grid-row: 3 / 11;
-    padding-bottom: 10px;
-
-    margin-top: 20px;
+    grid-row: 3 / 10;
+    padding-bottom: 0.8rem;
+    margin-top: 8.4rem;
+    border: 1px dotted lightcoral;
+    z-index: 6;
   }
 
   .item-3 {
     grid-column: 5 / 7;
-    padding-bottom: 10px;
-    margin-bottom: 15px;
-    margin-top: 20px;
+    padding-bottom: 10.8rem;
+    margin-bottom: 1.1rem;
+    margin-top: 1.4rem;
 
   }
 
   .item-4 {
     grid-column: 2 / 7;
-    padding-bottom: 10px;
-    margin-bottom: 15px;
-    margin-top: 20px;
+    padding-bottom: 0.8rem;
+    margin-bottom: 1rem;
+    margin-top: 1.4rem;
   }
 }
 
@@ -124,8 +126,8 @@
 
   .item-3 {
     grid-column: 5/7;
-    margin-left: 40px;
-    padding-left: 20px;
+    margin-left: 2.6rem;
+    padding-left: 1.4rem;
     z-index: 2;
   }
 
@@ -135,9 +137,9 @@
   .item-1 {
     grid-column: 5 / 7;
     grid-row: 2 / 3;
-    padding-bottom: 10px;
-    margin-bottom: 15px;
-    margin-top: 20px;
+    padding-bottom: 0.8rem;
+    margin-bottom: 1rem;
+    margin-top: 1.4rem;
     //background: orange;
   }
 
@@ -152,20 +154,20 @@
   }
 
   .item-3 {
-    grid-column: 4 / 6;
+    grid-column: 5 / 7;
     grid-row: 4 / 5;
-    margin-bottom: 30px;
+    margin-bottom: 1.9rem;
     z-index: 3;
-    margin-left: 47px;
+    margin-left: 3.1rem;
   }
 
   .item-4 {
     grid-column: 2 / 6;
-    grid-row: 6 / 7;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    margin-right: 20px;
-    z-index: 4;
+    grid-row: 5 / 7;
+    margin-top: 1.9rem;
+    margin-bottom: -1.9rem;
+    margin-right: 1.4rem;
+    z-index: 6;
     //background-color: blanchedalmond;
   }
   .item-5 {
@@ -173,11 +175,11 @@
     grid-column: 6 / 7;
     grid-row: 5 / 9;
     z-index: 6;
-    padding-top: 30px;
-    margin-bottom: 20px;
+    padding-top: 1.9rem;
+    margin-bottom: 1.4rem;
     //background-color: green;
     p{
-      font-size: 16px;
+      font-size: 1rem;
     }
   }
 
@@ -188,4 +190,15 @@
     z-index: 3;
   }
 }
+/* petit PC portable md-plus 1280px */
+@media screen and (min-width: break-point(mlg-plus)){
+  .item-4{
+    grid-column: 3 / 6;
+    z-index:6;
+  }
+  .item-6 {
+    grid-column: 4/7;
+  }
+}
+
 
