--- a/sass/modules/_m-realisations.scss
+++ b/sass/modules/_m-realisations.scss
@@ -5,7 +5,7 @@
   }
 
   .lime {
-    margin: 15px;
+    margin: 1.2rem;
     //border: 4px dashed lime;
   }
   .title__primary2 {
@@ -38,39 +38,39 @@
   }
 
   .backimage {
-    padding-left: 10px;
+    padding-left: 0.6rem;
   }
   .backimage > img {
     max-width: 88%;
-    margin-top: 20px;
-    padding-top: 20px;
+    margin-top: 1.4rem;
+    padding-top: 1.4rem;
   }
 
   .backimage-second img {
     position: relative;
     max-width: 100%;
-    left: -20px;
-    top: -213px;
+    left: -1.4rem;
+    top: -16rem;
   }
 
   .coverimage {
     position: relative;
-    left: -36px;
-    bottom: 243px;
+    left: -2.1rem;
+    bottom: 16rem;
     width: 84%;
-    padding-left: 64px;
+    padding-left: 5rem;
   }
 
   .coverimage-ter{
     display: block;
     position: relative;
     width: 25%;
-    left: 132px;
-    bottom: 237px;
+    left: 8.7rem;
+    bottom: 12.5rem;
   }
 
   .coverrelatif {
-    padding-right: 10px;
+    padding-right: 0.8rem;
     width: 90%;
     //border:1px solid blueviolet;
   }
@@ -86,11 +86,11 @@
   @media screen and (min-width: break-point(xxxs)){
     .coverrelatif img{
       width: 88%;
-      padding-left: 10px;
+      padding-left: 0.8rem;
     }
     .coverimage-ter img{
       width: 130%;
-      padding-left: 30px;
+      padding-left: 2.2rem;
     }
 
   }
@@ -101,15 +101,29 @@
     }
 
     .coverimage{
-      bottom: 309px;
+      bottom: 19rem;
     }
     .coverimage-ter {
       width: 28%;
-      left: 136px;
-      bottom: 285px;
-      padding-left: 10px;
+      /*
+      left: 11.6rem;
+      bottom: 16.5rem;
+      */
+      left: 9.7rem;
+      bottom: 18.5rem;
+      padding-left: 0.8rem;
     }
 
+  }
+  /* version très petite tablette xx-s 530px */
+  @media screen and (min-width: break-point(xx-s)){
+    .coverimage{
+      bottom: 25rem;
+    }
+    .coverimage-ter{
+      left: 12.7rem;
+      bottom: 23.5rem;
+    }
   }
 
 
@@ -118,26 +132,36 @@
     .backimage{
       position: absolute;
       padding-left: 10px;
+      width: 42%;
+      margin-top: 7rem;
     }
     .backimage>img {
-      max-width: 104%;
-      left: 34px;
-      top: -42px;
+      max-width: 74%;
+      left: 2.1rem;
+      top: -2.3rem;
+    }
+    .coverimage{
+      bottom: 12rem;
     }
 
     .coverrelatif {
-      left: 91px;
-      bottom: 171px;
+      left: 6.1rem;
+      bottom: 11.2rem;
+      width: 100%;
     }
     .coverrelatif img {
-      max-width: 65%;
+      max-width: 81%;
+    }
+    .coverimage-ter{
+      left: 5.3rem;
+      bottom: 26.5rem;
     }
 
     .coverrelatif-ter {
-  position: absolute;
-  left: 70px;
-  bottom: -138px;
-  //border: 1px solid yellow;
+    position: absolute;
+    left: -0.4rem;
+    bottom: -20.2rem;
+    border: 1px solid orange;
     }
 
     .coverimage-ter{
@@ -148,26 +172,38 @@
 
   /* grande TABLETTE md = 740px */
   @media screen and (min-width: break-point(md)){
+    .coverimage{
+      left: -4rem;
+    }
+
     .coverrelatif {
-      left: 52px;
-      bottom: 190px;
+      left: 4.9rem;
+      bottom: 13.2rem;
+    }
+    .coverrelatif img{
+      max-width: 65%;
     }
 
     .coverrelatif-second {
-      left: -34px;
-      bottom: 121px;
+      left: -2.1rem;
+      bottom: 12.2rem;
+    }
+    .coverimage-ter{
+      left: -11.7rem;
+      bottom: 9.5rem;
     }
 
+
     .coverrelatif-ter{
-      left: 277px;
-      bottom: -46px;
-      width: 35%;
+      left: 16rem;
+      bottom: -3.1rem;
+      width: 90%;
     }
 
     .backimage>img {
-      left: -98px;
-      max-width: 47%;
-      top: -28px;
+      left: -7.2rem;
+      max-width: 59%;
+      top: -1.8rem;
     }
   }
 
@@ -176,9 +212,9 @@
 
     .backimage > img {
       position: relative;
-      left: 74px;
+      left: 4.8rem;
       max-width: 51%;
-      top: -21px;
+      top: -1.3rem;
     }
 
     .coverimage {
@@ -191,42 +227,46 @@
 
     .coverrelatif {
       position: relative;
-      left: 106px;
-      bottom: -109px;
+      left: 7.5rem;
+      bottom: -6.2rem;
+      width: 89%;
     }
     .coverrelatif img {
-      max-width: 100%;
+      max-width: 68%;
     }
 
     .coverrelatif-second {
-      position: relative;
-      left: -34px;
-      bottom: -76px;
-    //border: 1px solid red;
+      /*position: relative;
+      left: -2.1rem;
+      bottom: -1.7rem;
+      border: 1px solid red;
+      width: 15%;*/
+      display: none;
     }
-    .coverrelatif-second img {
-      max-width: 30%;
-    }
+
 
     .coverrelatif-ter {
       position: absolute;
-      left: 310px;
-      bottom: -64px;
-      max-width: 34%;
+      left: 20.2rem;
+      bottom: -7.1rem;
+      max-width: 152%;
     // border: 1px solid yellow;
     }
     .coverrelatif-ter img {
-      max-width: 55%;
+      max-width: 100%;
+      bottom: -9rem;
     }
 
     .backimage-second {
-      padding-left: 10px;
-      margin-left: 20px;
+      padding-left: 0.8rem;
+      margin-left: 1.6rem;
     }
     .backimage-second img {
-      max-width: 68%;
-      left: -17px;
-      top: -147px;
+      max-width: 100%;
+      left: -1.1rem;
+      top: -1rem;
+
+
     }
 
   }
@@ -235,17 +275,23 @@
   @media screen and (min-width: break-point(lg)){
     .coverrelatif-ter {
         position: absolute;
-        left: 310px;
-        bottom: -90px;
-        max-width: 34%;
+        left: 22rem;
+        bottom: -7.2rem;
+        max-width: 100%;
       //  border: 1px solid yellow;
+    }
+  }
+  @media screen and (min-width: break-point(mlg)){
+    .coverrelatif {
+      left: 7.5rem;
+      bottom: -4.2rem
     }
   }
 
   /* PC portable xlg 1360px */
   @media screen and (min-width: break-point(xlg)){
     .backimage-second img {
-  top: -180px;
+  top: -11.5rem;
     }
   }
 
