--- a/sass/modules/_m-realisations-grid.scss
+++ b/sass/modules/_m-realisations-grid.scss
@@ -191,7 +191,7 @@
   }
 }
 /* petit PC portable md-plus 1280px */
-@media screen and (min-width: break-point(mlg-plus)){
+@media screen and (min-width: break-point(mlg)){
   .item-4{
     grid-column: 3 / 6;
     z-index:6;
