--- a/css/screen.css
+++ b/css/screen.css
@@ -130,7 +130,7 @@ img {
   }
 }
 
-/********************BANNER********************/
+/********************BANNER home********************/
 /* line 2, ../sass/layout/_l-banner.scss */
 .l-section__banner {
   grid-column: 1/4;
@@ -579,6 +579,451 @@ img {
   }
 }
 
+/********************BANNER realisations********************/
+/* line 360, ../sass/layout/_l-banner.scss */
+.l-section__banner--realisation {
+  grid-column: 1/4;
+  background-color: #033752;
+}
+@media screen and (min-width: 740px) {
+  /* line 360, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation {
+    background-color: white;
+  }
+}
+@media screen and (min-width: 1925px) {
+  /* line 360, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation {
+    padding-bottom: 4rem;
+    background-color: #04486a;
+  }
+}
+@media screen and (min-width: 1420px) and (max-width: 1900px) {
+  /* line 360, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation {
+    background-color: #04486a;
+    padding-bottom: 4rem;
+  }
+}
+/* line 378, ../sass/layout/_l-banner.scss */
+.l-section__banner--realisation .l-banner {
+  display: inline-grid;
+}
+@media screen and (min-width: 740px) {
+  /* line 378, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner {
+    margin-top: 0;
+    margin-left: 0;
+  }
+}
+/* line 388, ../sass/layout/_l-banner.scss */
+.l-section__banner--realisation .l-banner .l-banner-img {
+  grid-template-areas: "l-section__banner l-section__banner  . ";
+  z-index: 1;
+  grid-column: 1;
+  grid-row: 1;
+  margin-top: 2rem;
+  display: none;
+}
+@media screen and (min-width: 740px) {
+  /* line 388, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .l-banner-img {
+    margin-top: 0;
+    margin-left: 0;
+    max-width: 600px;
+    display: block;
+  }
+}
+@media screen and (min-width: 1024px) {
+  /* line 388, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .l-banner-img {
+    margin-top: inherit;
+    max-width: 810px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  /* line 388, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .l-banner-img {
+    max-width: 1060px;
+  }
+}
+@media screen and (min-width: 1360px) {
+  /* line 388, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .l-banner-img {
+    max-width: 1190px;
+  }
+}
+@media screen and (min-width: 1420px) {
+  /* line 388, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .l-banner-img {
+    max-width: 1160px;
+  }
+}
+@media screen and (min-width: 1920px) {
+  /* line 388, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .l-banner-img {
+    max-width: 1635px;
+  }
+}
+/* line 432, ../sass/layout/_l-banner.scss */
+.l-section__banner--realisation .l-banner .l-img {
+  display: grid;
+  grid-template-areas: "l-section__banner l-section__banner  . " "l-img l-img l-img";
+  z-index: 997;
+  width: auto;
+  width: 16rem;
+  grid-column: 1/3;
+  grid-row: 1;
+  justify-content: space-between;
+  margin: 7rem auto auto 3rem;
+}
+@media screen and (min-width: 740px) {
+  /* line 432, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .l-img {
+    width: 18rem;
+    margin: 3rem 0rem auto 28rem;
+    padding-top: 2rem;
+    grid-column: 1;
+    grid-row: 1;
+  }
+}
+@media screen and (min-width: 1024px) {
+  /* line 432, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .l-img {
+    width: 26rem;
+    margin: 3rem 0rem auto 35rem;
+    padding-top: 2rem;
+  }
+}
+@media screen and (min-width: 1280px) {
+  /* line 432, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .l-img {
+    width: 33rem;
+    margin: 7rem 0rem auto 44rem;
+    grid-column: 1/2;
+    grid-row: 1;
+  }
+}
+@media screen and (min-width: 1360px) {
+  /* line 432, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .l-img {
+    width: 36rem;
+    margin: 3rem 0rem auto 40rem;
+  }
+}
+@media screen and (min-width: 1420px) {
+  /* line 432, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .l-img {
+    width: 43rem;
+    margin: 3rem 0rem auto 44rem;
+  }
+}
+@media screen and (min-width: 1920px) {
+  /* line 432, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .l-img {
+    width: 57rem;
+    margin: 7rem 0rem auto 55rem;
+  }
+}
+/* line 481, ../sass/layout/_l-banner.scss */
+.l-section__banner--realisation .l-banner .l-logo-lg {
+  display: none;
+}
+@media screen and (min-width: 740px) {
+  /* line 481, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .l-logo-lg {
+    display: none;
+  }
+}
+@media screen and (min-width: 1024px) {
+  /* line 481, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .l-logo-lg {
+    margin: -34.1rem auto auto 6rem;
+    width: 12rem;
+    display: block;
+    z-index: 997;
+    position: relative;
+  }
+}
+@media screen and (min-width: 1280px) {
+  /* line 481, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .l-logo-lg {
+    margin: -44.8rem auto auto 6rem;
+    width: 12rem;
+  }
+}
+@media screen and (min-width: 1360px) {
+  /* line 481, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .l-logo-lg {
+    margin: -49rem auto auto 6rem;
+    width: 12rem;
+  }
+}
+@media screen and (min-width: 1920px) {
+  /* line 481, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .l-logo-lg {
+    margin: -69.3rem auto auto 6rem;
+    width: 12rem;
+  }
+}
+/* line 512, ../sass/layout/_l-banner.scss */
+.l-section__banner--realisation .l-banner .title__primary {
+  font-style: italic;
+  margin: 1rem auto 1rem auto;
+  text-align: left;
+  color: white;
+  width: 100%;
+  font-size: 30px;
+  display: none;
+}
+/* line 522, ../sass/layout/_l-banner.scss */
+.l-section__banner--realisation .l-banner .title__primary span {
+  border-bottom: solid 3px #4eb748;
+  color: white;
+  font-weight: bold;
+  font-style: bold;
+}
+@media screen and (min-width: 740px) {
+  /* line 512, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .title__primary {
+    margin: -20rem auto -4rem 2rem;
+    font-size: 30px;
+    display: block;
+    position: relative;
+    z-index: 997;
+  }
+}
+@media screen and (min-width: 1024px) {
+  /* line 512, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .title__primary {
+    margin: -28rem auto -4rem 2rem;
+  }
+}
+@media screen and (min-width: 1280px) {
+  /* line 512, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .title__primary {
+    margin: -36rem auto -4rem 5rem;
+    font-size: 35px;
+  }
+}
+@media screen and (min-width: 1360px) {
+  /* line 512, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .title__primary {
+    margin: -44rem auto -4rem 5rem;
+  }
+}
+@media screen and (min-width: 1920px) {
+  /* line 512, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .title__primary {
+    margin: -60rem auto -4rem 5rem;
+  }
+}
+/* line 557, ../sass/layout/_l-banner.scss */
+.l-section__banner--realisation .l-banner .l-txt {
+  color: white;
+  font-style: italic;
+  display: none;
+  z-index: 996;
+  margin: 10rem auto auto auto;
+  font-size: 16px;
+}
+@media screen and (min-width: 740px) {
+  /* line 557, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .l-txt {
+    font-size: 16px;
+    margin: -17rem auto auto 2.2rem;
+    display: block;
+    width: 40%;
+    font-weight: bold;
+  }
+}
+@media screen and (min-width: 1024px) {
+  /* line 557, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .l-txt {
+    margin: -24rem auto auto 2rem;
+    width: 40%;
+  }
+}
+@media screen and (min-width: 1280px) {
+  /* line 557, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .l-txt {
+    margin: -30rem auto auto 5.2rem;
+    font-size: 18px;
+  }
+}
+@media screen and (min-width: 1360px) {
+  /* line 557, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .l-txt {
+    margin: -38rem auto auto 5rem;
+    font-size: 20px;
+  }
+}
+@media screen and (min-width: 1920px) {
+  /* line 557, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .l-txt {
+    font-size: 29px;
+    margin: -51rem auto auto 4.3rem;
+  }
+}
+/* line 597, ../sass/layout/_l-banner.scss */
+.l-section__banner--realisation .l-banner .l-point {
+  width: 10rem;
+  margin: -3.2rem auto auto 1.5rem;
+  z-index: 996;
+  padding-bottom: 2rem;
+}
+@media screen and (min-width: 740px) {
+  /* line 597, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .l-point {
+    margin: -9.5rem auto auto 9rem;
+    width: 8rem;
+  }
+}
+@media screen and (min-width: 1024px) {
+  /* line 597, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .l-point {
+    margin: -14.5rem auto auto 12rem;
+    width: 11rem;
+  }
+}
+@media screen and (min-width: 1280px) {
+  /* line 597, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .l-point {
+    margin: -18.5rem auto auto 15rem;
+    width: 14rem;
+  }
+}
+@media screen and (min-width: 1360px) {
+  /* line 597, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .l-point {
+    margin: -18.5rem auto auto 15rem;
+    width: 14rem;
+  }
+}
+@media screen and (min-width: 1920px) {
+  /* line 597, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .l-point {
+    margin: -25.5rem auto auto 17rem;
+    width: 18rem;
+  }
+}
+/* line 625, ../sass/layout/_l-banner.scss */
+.l-section__banner--realisation .l-banner .btn__banner {
+  margin: 9rem auto auto -10rem;
+  text-align: center;
+  width: 15rem;
+}
+@media screen and (min-width: 740px) {
+  /* line 625, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .btn__banner {
+    display: none;
+    font-size: 14px;
+  }
+}
+@media screen and (min-width: 799px) {
+  /* line 625, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .btn__banner {
+    display: none;
+    font-size: 14px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  /* line 625, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .btn__banner {
+    margin-left: -5rem;
+    margin-top: 1rem;
+    display: block;
+  }
+}
+@media screen and (min-width: 1280px) {
+  /* line 625, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .btn__banner {
+    font-size: 22px;
+    width: 16rem;
+    padding: 1rem;
+    margin-left: 3rem;
+  }
+}
+@media screen and (min-width: 1920px) {
+  /* line 625, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .btn__banner {
+    margin-top: 1.5rem;
+    margin-left: 6rem;
+  }
+}
+/* line 655, ../sass/layout/_l-banner.scss */
+.l-section__banner--realisation .l-banner .crl--blue {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  margin: -7.2rem auto auto 1rem;
+  color: white;
+  font-size: 18px;
+  z-index: 997;
+  width: 80%;
+}
+/* line 665, ../sass/layout/_l-banner.scss */
+.l-section__banner--realisation .l-banner .crl--blue p {
+  display: none;
+}
+@media screen and (min-width: 740px) {
+  /* line 655, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .crl--blue {
+    margin: -8.2rem 1rem auto 5rem;
+    color: white;
+    width: 48%;
+  }
+  /* line 679, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .crl--blue p {
+    display: flex;
+    font-size: 16px;
+    padding-left: 0.5rem;
+  }
+  /* line 683, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .crl--blue p ::before {
+    content: ">";
+    color: #4eb748;
+  }
+}
+@media screen and (min-width: 1024px) {
+  /* line 655, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .crl--blue {
+    margin: -11.2rem auto auto 9rem;
+    width: 40%;
+    font-size: 20px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  /* line 655, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .crl--blue {
+    margin: -14.2rem auto auto 5rem;
+    width: 50%;
+  }
+  /* line 703, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .crl--blue p {
+    font-size: 20px;
+  }
+}
+@media screen and (min-width: 1420px) {
+  /* line 655, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .crl--blue {
+    margin: -16.2rem auto auto 5rem;
+    width: 45%;
+    font-size: 22px;
+  }
+}
+@media screen and (min-width: 1920px) {
+  /* line 655, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .crl--blue {
+    margin: -20.2rem auto auto 5rem;
+    width: 42%;
+  }
+  /* line 716, ../sass/layout/_l-banner.scss */
+  .l-section__banner--realisation .l-banner .crl--blue p {
+    font-size: 24px;
+  }
+}
+
 /* line 1, ../sass/layout/_l-header.scss */
 .l-header {
   display: inline-grid;
@@ -654,10 +1099,6 @@ img {
       background-color:map-get($colors,primary); ;
   }*/
 }
-/* line 81, ../sass/layout/_l-header.scss */
-.l-header .l-nav__main.l-menu.is-visible {
-  display: inline-block;
-}
 @media screen and (min-width: 740px) {
   /* line 71, ../sass/layout/_l-header.scss */
   .l-header .l-nav__main.l-menu {
@@ -705,7 +1146,6 @@ img {
     text-align: left;
     position: inherit;
     padding-top: 0;
-    display: inline-block;
     font-size: 18px;
   }
 }
@@ -1003,8 +1443,14 @@ footer .l-footer .section__footer--right .btn--footer {
   float: left;
   margin: 2rem auto auto 0;
 }
+@media screen and (min-width: 1024px) {
+  /* line 115, ../sass/layout/_l-footer.scss */
+  footer .l-footer .section__footer--right .btn--footer {
+    margin: 2rem auto auto -3rem;
+  }
+}
 
-/* line 131, ../sass/layout/_l-footer.scss */
+/* line 134, ../sass/layout/_l-footer.scss */
 .copyright {
   display: flex;
   text-align: center;
@@ -1014,7 +1460,7 @@ footer .l-footer .section__footer--right .btn--footer {
   width: auto;
   background-color: #033752;
 }
-/* line 140, ../sass/layout/_l-footer.scss */
+/* line 143, ../sass/layout/_l-footer.scss */
 .copyright a {
   text-decoration: none;
   padding: 1rem 1.5rem auto auto;
@@ -1023,12 +1469,12 @@ footer .l-footer .section__footer--right .btn--footer {
   font-size: 16px;
   width: 100%;
 }
-/* line 148, ../sass/layout/_l-footer.scss */
+/* line 151, ../sass/layout/_l-footer.scss */
 .copyright a:hover {
   color: #4eb748;
 }
 @media screen and (min-width: 1024px) {
-  /* line 131, ../sass/layout/_l-footer.scss */
+  /* line 134, ../sass/layout/_l-footer.scss */
   .copyright {
     font-size: 18px;
     padding-top: 3rem;
@@ -1037,7 +1483,7 @@ footer .l-footer .section__footer--right .btn--footer {
     display: block;
   }
 }
-/* line 162, ../sass/layout/_l-footer.scss */
+/* line 165, ../sass/layout/_l-footer.scss */
 .copyright .icon--heart {
   width: 1rem;
   text-decoration: none;
@@ -1046,7 +1492,7 @@ footer .l-footer .section__footer--right .btn--footer {
   font-size: 16px;
   width: 0.8rem;
 }
-/* line 171, ../sass/layout/_l-footer.scss */
+/* line 174, ../sass/layout/_l-footer.scss */
 .copyright .icon--heart:hover {
   color: #4eb748;
 }
@@ -2127,7 +2573,7 @@ footer .l-footer .section__footer--right .btn--footer {
     margin-top: 2rem;
     height: auto;
     width: 100%;
-    padding-right: 4rem;
+    padding-right: 2rem;
     justify-content: space-between;
     background-image: cover;
   }
